@@ -1,3 +1,6 @@
+[B][COLOR red]Update - v1.1.2 - March 10, 2021[/COLOR][/B]
+[COLOR yellow]--[/COLOR][I] Change method of determining bookmarks to use "ListItem.IsResumable".[/I]
+
 [B][COLOR red]Update - v1.1.1 - March 06, 2021[/COLOR][/B]
 [COLOR yellow]--[/COLOR][I] Matrix(py3) compatibility update.[/I]
 
